Master folder optimization and full sync

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="selection">
     <meta name="keywords" content="HeartGym, Gym, Bodybuilding, Fit, Fitness">
-    <meta name="description" content="Home">
+    <meta name="description" content="Contacts">
     <meta name="author" content="Георги Сянков">
-    <link rel="icon" href="./icons/titleIcon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/heartGym.css">
+    <link rel="icon" href="../icons/titleIcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/heartGym.css">
     <link href="https://fonts.googleapis.com/css2?family=Shojumaru&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>HeartGym</title>
@@ -20,7 +20,7 @@
         <div>
             <!-- Header -->
             <div class="Logo hov">
-                <a href="./index.html"><img src="./images/logo.png" width="150" alt="HeartLogo"></a>
+                <a href="../index.html"><img src="../images/logo.png" width="150" alt="HeartLogo"></a>
             </div>
             <div>
                 <h1>HeartGym</h1>
@@ -30,28 +30,37 @@
     <nav>
         <!-- Nav Bar -->
         <div class="navbar">
-            <a href="./index.html" title="Home">Home</a>
-            <a href="./pages/news.html" title="News">News</a>
-            <a href="./pages/aboutUs.html" title="About Us">About Us</a>
-            <a href="./pages/services.html" title="Services">Services</a>
-            <a href="./pages/gallery.html" title="Gallery">Gallery</a>
-            <a href="./pages/contacts.html" title="Contacts">Contact</a>
+            <a href="../index.html" title="Home">Home</a>
+            <a href="./news.html" title="News">News</a>
+            <a href="./aboutUs.html" title="About Us">About Us</a>
+            <a href="./services.html" title="Services">Services</a>
+            <a href="./gallery.html" title="Gallery">Gallery</a>
+            <a href="./contacts.html" title="Contacts">Contact</a>
             <div class="clear"></div>
         </div>
     </nav>
     <main>
-        <div class="home">
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis alias ipsa repellat, minima
-                dignissimos laudantium ab impedit blanditiis quia cumque commodi necessitatibus labore aliquam aperiam
-                obcaecati excepturi, eveniet quis. Ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-                voluptates eum quasi voluptate incidunt et inventore iure tenetur consequuntur ut blanditiis similique
-                temporibus maiores, aut placeat animi magni possimus est?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Nobis nesciunt voluptates odit laudantium, sapiente quis doloremque ullam iure alias
-                consequuntur ducimus sit maxime ex, ut architecto hic natus accusantium id.
-            </p>
+        <!-- Main -->
+        <div class="contacts">
+            <div class="maps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3552.987390457214!2d23.308342298298395!3d42.730831104210836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa901f64e74d53%3A0x1160e35fcefcf64a!2sul.%20%22Republika%22%2067%2C%201220%20g.k.%20Nadezhda%202%2C%20Sofia!5e0!3m2!1sen!2sbg!4v1598201648439!5m2!1sen!2sbg"
+                    width="600" height="450" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+                <div class="mapInfo">
+                    <ul>
+                        <li>ul. "Republika" 67, 1220 g.k. Nadezhda 2, Sofia</li>
+                        <li>TEL: 088 XXXXXXX</li>
+                        <li>Faks: 088 XXXXXXX</li>
+                        <li><a href="https://www.instagram.com/" target="_blank" title="Instagram">INSTAGRAM</a></li>
+                        <li><a href="https://twitter.com/" target="_blank" title="Twitter">TWITTER</a></li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </main>
+
     <footer>
         <div class="social">
             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"
@@ -67,6 +76,7 @@
                     target="_blank">Георги
                     Сянков</a></i>
         </h4>
+        
     </footer>
 
 
