--- a/pages/services.html
+++ b/pages/services.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="selection">
     <meta name="keywords" content="HeartGym, Gym, Bodybuilding, Fit, Fitness">
-    <meta name="description" content="Home">
+    <meta name="description" content="About Us">
     <meta name="author" content="Георги Сянков">
-    <link rel="icon" href="./icons/titleIcon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/heartGym.css">
+    <link rel="icon" href="../icons/titleIcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/heartGym.css">
     <link href="https://fonts.googleapis.com/css2?family=Shojumaru&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>HeartGym</title>
@@ -20,7 +20,7 @@
         <div>
             <!-- Header -->
             <div class="Logo hov">
-                <a href="./index.html"><img src="./images/logo.png" width="150" alt="HeartLogo"></a>
+                <a href="../index.html"><img src="../images/logo.png" width="150" alt="HeartLogo"></a>
             </div>
             <div>
                 <h1>HeartGym</h1>
@@ -30,28 +30,31 @@
     <nav>
         <!-- Nav Bar -->
         <div class="navbar">
-            <a href="./index.html" title="Home">Home</a>
-            <a href="./pages/news.html" title="News">News</a>
-            <a href="./pages/aboutUs.html" title="About Us">About Us</a>
-            <a href="./pages/services.html" title="Services">Services</a>
-            <a href="./pages/gallery.html" title="Gallery">Gallery</a>
-            <a href="./pages/contacts.html" title="Contacts">Contact</a>
+            <a href="../index.html" title="Home">Home</a>
+            <a href="./news.html" title="News">News</a>
+            <a href="./aboutUs.html" title="About Us">About Us</a>
+            <a href="./services.html" title="Services">Services</a>
+            <a href="./gallery.html" title="Gallery">Gallery</a>
+            <a href="./contacts.html" title="Contacts">Contact</a>
             <div class="clear"></div>
         </div>
     </nav>
     <main>
-        <div class="home">
+        <!-- Main -->
+        <div class="services">
+            <img src="../images/Services/sauna.jpg" title="Sauna" width="450" alt="img">
+            <img src="../images/Services/proteinShake.jpg" title="ProteinShake" width="450" alt="img">
+            <img src="../images/Services/proteinBar.png" title="ProteinBar" width="450" alt="img">
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis alias ipsa repellat, minima
-                dignissimos laudantium ab impedit blanditiis quia cumque commodi necessitatibus labore aliquam aperiam
-                obcaecati excepturi, eveniet quis. Ducimus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-                voluptates eum quasi voluptate incidunt et inventore iure tenetur consequuntur ut blanditiis similique
-                temporibus maiores, aut placeat animi magni possimus est?Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Nobis nesciunt voluptates odit laudantium, sapiente quis doloremque ullam iure alias
-                consequuntur ducimus sit maxime ex, ut architecto hic natus accusantium id.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui possimus enim adipisci asperiores
+                reiciendis voluptate ab alias eum facilis, dignissimos soluta error repellendus nam esse cumque nihil
+                illum architecto rerum?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit adipisci soluta
+                ratione eos architecto, veritatis dolorum explicabo accusantium reiciendis laborum suscipit id iure
+                corrupti ipsam unde est autem quae voluptas!
             </p>
         </div>
     </main>
+
     <footer>
         <div class="social">
             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"
@@ -62,11 +65,13 @@
             <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"
                     title="Instagram"></i></a>
         </div>
+
         <h4>
             <i>Design by <a class="author" href="https://www.facebook.com/profile.php?id=100023255315461"
                     target="_blank">Георги
                     Сянков</a></i>
         </h4>
+
     </footer>
 
 
